@@ -1,3 +1,6 @@
+* let the name of the dns server be configured in DNS.pm
+  -- ark <yesv *ring.wtwf.com>
+
 2006/3/24 -- released version 20060324_trunk
 
 2006/3/23 -- released version 20060323_trunk
